fix: make button text more visible

--- a/src/patches.scss
+++ b/src/patches.scss
@@ -35,3 +35,7 @@ hr,
   background-color: $gray-800 !important;
   color: $gray-400 !important;
 }
+
+.btn-outline-secondary {
+  color: $gray-300;
+}
